test/functional/Sema/bad_struct_initializer.glu
//
// RUN: not gluc %s 2>&1 | FileCheck %s
//

func puts(s: String);

struct MyStruct {
    first: String = "firstDefault",
    second: String = "secondDefault",
}

func testStruct(s: MyStruct) -> Void {
    puts(s.first);
    puts(s.second);
}

// CHECK: error: Too many initializers for struct 'MyStruct' (expected at most 2, got 3)
func main() -> Int {
    let s: MyStruct = {"1", "2", "3"};

    testStruct(s);
    return 0;
}
